************************
*** PMFvXXXX
*** XXXXXXXXXXXXXXXXXXXX
************************

### Solvers

- groundwater2DFoam

  - solver adapted to handle uniform or non-uniform infiltration event (also
  accept mesh conformal event => consider as uniform infiltration)

- groundwaterTransport2DFoam

  - new solver coupling 2D water modeling (groundwater2DFoam) with 2D scalar
  transport (porousScalarTransport2DFoam).

### Libraries

- toolsGIS

  - uniformInfiltrationEventFile replaced by infiltrationEventFile
  infiltration for groundwater2DFoam can be uniform or non-uniform (value
  specified at each time for each cell in event file)

### Tutorials

- fix event keywords in several tutorials

- cleaning configuration files removing useless keywords/dictionaries

************************
*** PMFv1906
*** Event file generalization + seepage/forcing term for 2D solvers
************************

### Solvers

- Global :

  - Event file can be specified in transportProperties to force the solver
    to compute solution at given date time.
    eventFileSource for volumetric/mass event :
    eventFilePatch for infiltration/fixed flux event on BC
    eventFileOutput to specify write times

  - solvers with injection/extraction terms are now conservative using Euler
  or backward time-scheme (Crank-Nicholson still not supported)

  - All injection terms in event should be negative (as for boundaries) and
  extraction terms should be positive (as for outlet boundary fluxes)

- groundwater2DFoam

  - solver accepts dry cells (display WARNING when adding water)

- groundwaterFoam

  - seepage function is available (generates seepageTerm field)
  - potentialMNT field is modified if < z0

- impesFoam/anisoImpesFoam

  - generalization of the "event" use wellbore dictionary/function is obsolete

- porousScalarTransportFoam

  - water content (theta) can be given instead of saturation (Sphase) to allow
  the direct use of pre-computed stationaryGroundwaterFoam computations