@@ -70,6 +70,19 @@ IOdictionary transportProperties
     )
 );
 
+//- dictionary for handling event time from boundary conditions
+IOdictionary patchEventFiles
+(
+    IOobject
+    (
+        "patchEventFiles",
+        runTime.constant(),
+        mesh,
+        IOobject::NO_READ,
+        IOobject::NO_WRITE
+    )
+);
+
 dimensionedScalar Sbmin(transportProperties.lookupOrDefault("Sbmin",dimensionedScalar("Sbmin",dimless,0)));
 
 /////////////////////////////////////////////////////////////////////////////
