@@ -35,8 +35,6 @@ Developers
 #include "fvCFD.H"
 #include "incompressiblePhase.H"
 #include "sourceEventFile.H"
-#include "outputEventFile.H"
-#include "patchEventFile.H"
 
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 
